add ec2 and r53

--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -16,8 +16,8 @@
     amazon.aws.ec2_instance:
       name: "{{ item }}"
       instance_type: t3.micro
-      security_group: {{ sg_id }}
-      image_id: "{{ ami_id }}"
+      security_group: "{{ sg_id }}"
+      image_id: "{{ ami_id }}"  
     loop: "{{ instances }}"
     register: ec2_output
 
