add ec2 and r53

--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -27,10 +27,10 @@
 
   - name: print public_ip
     ansible.builtin.debug:
-      msg: "{{ item.instance[0].public_ip_address }}" 
+      msg: "{{ item.instances[0].public_ip_address }}" 
     loop: "{{ ec2_output.results }}"
 
   - name: print private_ip
     ansible.builtin.debug:
-      msg: "{{ item.instance[0].private_ip_address }}"
+      msg: "{{ item.instances[0].private_ip_address }}"
     loop: "{{ ec2_output.results }}"
