--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -21,16 +21,27 @@
     loop: "{{ instances }}"
     register: ec2_output
 
-  - name: print the ec2_output
-    ansible.builtin.debug:
-      msg: "{{ ec2_output }}"
+  # - name: print the ec2_output
+  #   ansible.builtin.debug:
+  #     msg: "{{ ec2_output }}"
 
-  - name: print public_ip
-    ansible.builtin.debug:
-      msg: "{{ item.instances[0].public_ip_address }}" 
-    loop: "{{ ec2_output.results }}"
+  # - name: print public_ip
+  #   ansible.builtin.debug:
+  #     msg: "{{ item.instances[0].public_ip_address }}" 
+  #   loop: "{{ ec2_output.results }}"
 
-  - name: print private_ip
-    ansible.builtin.debug:
-      msg: "{{ item.instances[0].private_ip_address }}"
+  # - name: print private_ip
+  #   ansible.builtin.debug:
+  #     msg: "{{ item.instances[0].private_ip_address }}"
+  #   loop: "{{ ec2_output.results }}"
+
+  - name: create r53 record
+    amazon.aws.route53:
+      state: present
+      zone: "{{ domain_name }}"
+      record: "{{ item.item }}.{{ domain_name }}"
+      type: A
+      ttl: 1
+      value: "{{ item.instances[0].private_ip_address }}"
+      overwrite: true
     loop: "{{ ec2_output.results }}"
