--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -42,6 +42,6 @@
       record: "{{ item.item }}.{{ domain_name }}"
       type: A
       ttl: 1
-      value: "{{ item.instances[0].public_ip_address }}"
+      value: "{{ item.instances[0].private_ip_address }}"
       overwrite: true
     loop: "{{ ec2_output.results }}"
