--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -38,7 +38,8 @@
   - name: create r53 record
     amazon.aws.route53:
       state: present
-      zone: "{{ zone_id }}"
+      zone: "{{ domain_name }}"
+      zone_id: "{{ zone_id }}"
       record: "{{ item.item }}.{{ domain_name }}"
       type: A
       ttl: 1
