--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -39,7 +39,7 @@
     amazon.aws.route53:
       state: present
       zone: "{{ domain_name }}"
-      zone_id: "{{ zone_id }}"
+      hosted_zone_id: "{{ zone_id }}"
       record: "{{ item.item }}.{{ domain_name }}"
       type: A
       ttl: 1
