--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -8,9 +8,9 @@
     domain_name: "dops.fun"
     instances:
       - mongodb
-      #- redis
-      #- mysql
-      #- rabbitmq
+      - redis
+      - mysql
+      - rabbitmq
   tasks:
   - name: create ec2 instance
     amazon.aws.ec2_instance:
