--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -46,3 +46,8 @@
       value: "{{ item.instances[0].private_ip_address }}"
       overwrite: true
     loop: "{{ ec2_output.results }}"
+
+  - name: print the ec2_output.results
+    ansible.builtin.debug:
+      msg: "{{ ec2_output.results }}"
+   
