--- a/inventory.ini
+++ b/inventory.ini
@@ -1,15 +1,24 @@
-[catalogue]
-172.31.24.9 
+[mongodb]
+mongodb.dops.fun
 
+[redis]
+redis.dops.fun
 
-[frontend]
-172.31.24.7
+[mysql]
+mysql.dops.fun
+
+[rabbitmq]
+rabbitmq.dops.fun
 
 [cart]
 172.31.24.9
 
 [local]
 localhost
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
 
 [local:vars]
 #username=admin
