--- a/redis.yaml
+++ b/redis.yaml
@@ -15,13 +15,13 @@
 
   - name: allow remote connections
     ansible.builtin.replace:
-      path: /etc/redis.conf
+      path: /etc/redis/redis.conf
       regexp: '127.0.0.1'
       replace: '0.0.0.0'
 
   - name: disable protected mode
     ansible.builtin.lineinfile:
-      path: /etc/redis.conf
+      path: /etc/redis/redis.conf
       regexp: '^protected-mode yes'
       line: 'protected-mode no'
     
