--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -6,11 +6,12 @@
     sg_id: "sg-03c66e7a90fbbb324"
     zone_id: "Z05097823TWRPZG8NY41Q"
     domain_name: "dops.fun"
-    instances:
-      - mongodb
-      - redis
-      - mysql
-      - rabbitmq
+    # we can pass instances via command line also using -e option
+    # instances:
+    #   - mongodb
+    #   - redis
+    #   - mysql
+    #   - rabbitmq
   tasks:
   - name: create ec2 instance
     amazon.aws.ec2_instance:
