--- a/inventory.ini
+++ b/inventory.ini
@@ -10,8 +10,14 @@ mysql.dops.fun
 [rabbitmq]
 rabbitmq.dops.fun
 
+[catalogue]
+catalogue.dops.fun
+
 [cart]
-172.31.24.9
+cart.dops.fun
+
+[user]
+user.dops.fun
 
 [local]
 localhost
