--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -50,6 +50,7 @@
     ansible.builtin.copy:
       src: mongodb.repo
       dest: /etc/yum.repos.d/mongodb.repo
+      remote_src: yes
 
   - name: install mongodb client
     ansible.builtin.package:
