--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -57,7 +57,7 @@
       state: present
 
   - name: connect to monodb catalogue
-    ansible.builtin.command: mongosh mongodb.daws86s.fun --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
+    ansible.builtin.command: mongosh mongodb.dops.fun --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
     register: catalogue_output
 
   - name: print catalogue output
