--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -62,7 +62,9 @@
   
   - name: evaluate catalogue db
     community.mongodb.mongodb_shell:
+      login_host: "mongodb.dops.fun"
       eval: "db.getMongo().getDBNames().indexOf('catalogue')"
+    register: catalogue_output
 
   - name: print catalogue output
     ansible.builtin.debug:
