--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -60,12 +60,17 @@
   #   ansible.builtin.command: mongosh mongodb.dops.fun --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
   #   register: catalogue_output
   
-  - name: evaluate catalogue db
-    community.mongodb.mongodb_shell:
-      login_host: "mongodb.dops.fun"
-      eval: "db.getMongo().getDBNames().indexOf('catalogue')"
-    register: catalogue_output
+  # - name: evaluate catalogue db
+  #   community.mongodb.mongodb_shell:
+  #     login_host: "mongodb.dops.fun"
+  #     eval: "db.getMongo().getDBNames().indexOf('catalogue')"
+  #   register: catalogue_output
 
-  - name: print catalogue output
-    ansible.builtin.debug:
-      msg: "{{ catalogue_output }}"
+  # - name: print catalogue output
+  #   ansible.builtin.debug:
+  #     msg: "{{ catalogue_output }}"
+
+- name: load products into mongodb
+  ansible.builtin.shell: mongosh --host mongodb.daws86s.fun </app/db/master-data.js
+  when: catalogue_output.stdout < 0
+  
