--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -72,5 +72,4 @@
 
 - name: load products into mongodb
   ansible.builtin.shell: mongosh --host mongodb.daws86s.fun </app/db/master-data.js
-  when: catalogue_output.stdout < 0
-  
+  when: catalogue_output.stdout | int < 0
