--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -71,5 +71,12 @@
   #     msg: "{{ catalogue_output }}"
 
 - name: load products into mongodb
-  ansible.builtin.shell: mongosh --host mongodb.daws86s.fun </app/db/master-data.js
+  ansible.builtin.shell: mongosh --host mongodb.dops.fun </app/db/master-data.js
   when: catalogue_output.stdout | int < 0
+
+- name: start and enable catalogue service
+  ansible.builtin.service:
+    name: catalogue
+    state: started
+    enabled: yes
+   
