--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -56,9 +56,9 @@
       name: mongodb-mongosh
       state: present
 
-  # - name: connect to monodb catalogue
-  #   ansible.builtin.command: mongosh mongodb.dops.fun --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
-  #   register: catalogue_output
+  - name: connect to monodb catalogue
+    ansible.builtin.command: mongosh mongodb.dops.fun --quiet --eval "db.getMongo().getDBNames().indexOf('catalogue')"
+    register: catalogue_output
   
   # - name: evaluate catalogue db
   #   community.mongodb.mongodb_shell:
