--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -21,11 +21,21 @@
       shell: /sbin/nologin
       home: /home
 
+  - name: remove app directory  # safe to remove if already present
+    ansible.builtin.file:
+      path: /app
+      state: absent
+
   - name: create application directory
     ansible.builtin.file:
       state: directory
       path: /app
 
+  - name: delete old catalogue content
+    ansible.builtin.file:
+      path: /tmp/catalogue.zip
+      state: absent
+ 
   - name: download catalogue application content
     ansible.builtin.get_url:
       url: "https://roboshop-artifacts.s3.amazonaws.com/catalogue-v3.zip"
@@ -74,8 +84,17 @@
     ansible.builtin.shell: mongosh --host mongodb.dops.fun </app/db/master-data.js
     when: catalogue_output.stdout | int < 0
 
-  - name: start and enable catalogue service
-    ansible.builtin.service:
-      name: catalogue
-      state: started
-      enabled: yes
+  # - name: start and enable catalogue service
+  #   ansible.builtin.service:
+  #     name: catalogue
+  #     state: started
+  #     enabled: yes
+
+  - name: daemon reload enable and start catalogue
+    ansible.builtin.systemd_service:
+     daemon_reload: yes
+     name: catalogue
+     state: started
+     enabled: true
+
+ 
