updated catalogue file

--- a/cart.yaml
+++ b/cart.yaml
@@ -14,7 +14,7 @@
       state: present
 
   - name: add application cart
-    ansible.builtin.cart:
+    ansible.builtin.user:
       name: roboshop
       comment: roboshop system cart
       system: true
