--- a/inventory.ini
+++ b/inventory.ini
@@ -22,6 +22,15 @@ user.dops.fun
 [local]
 localhost
 
+[shipping]
+shipping.dops.fun
+
+[payment]
+payment.dops.fun
+
+[frontend]
+frontend.dops.fun
+
 [all:vars]
 ansible_user=ec2-user
 ansible_password=DevOps321
