--- a/payment.yaml
+++ b/payment.yaml
@@ -58,7 +58,7 @@
         dest: /etc/systemd/system/payment.service
 
   - name: daemon reload enable and start
-  ansible.builtinn.systemd_service:
+  ansible.builtin.systemd_service:
         name: shipping
         enabled: true
         state: started
