--- a/payment.yaml
+++ b/payment.yaml
@@ -58,8 +58,8 @@
         dest: /etc/systemd/system/payment.service
 
   - name: daemon reload enable and start
-  ansible.builtin.systemd_service:
-        name: shipping
+    ansible.builtin.systemd_service:
+        name: payment
         enabled: true
         state: started
         daemon_reload: true
