updated catalogue file

--- a/frontend.yaml
+++ b/frontend.yaml
@@ -9,7 +9,7 @@
       ansible.builtin.command: dnf module enable nginx:1.24 -y
 
     - name: install nginx        
-      ansible.bultin.dnf:
+      ansible.builtin.dnf:
         name: nginx
         state: present
 
