updated catalogue file

--- a/frontend.yaml
+++ b/frontend.yaml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
     - name: disable default nginx
-      ansible.builtin.command: dnf module disable nginx
+      ansible.builtin.command: dnf module disable nginx -y
 
     - name: enable nginx 1.24
       ansible.builtin.command: dnf module enable nginx:1.24 -y
