updated catalogue file

--- a/frontend.yaml
+++ b/frontend.yaml
@@ -32,6 +32,7 @@
       ansible.builtin.unarchive:
         src: /tmp/frontend.zip
         dest: /usr/share/nginx/html
+        remote_src: yes
 
     - name: delete default nginx config
       ansible.builtin.file:
