adding config file

--- a/frontend.aws_ec2.yaml
+++ b/frontend.aws_ec2.yaml
@@ -9,7 +9,7 @@ hostnames:
 compose:
   ansible_host: private_ip_address
 keyed_groups:
-  - key: tags.name
+  - key: tags.Name
     prefix: "dynamic"
     separator: "_"
 
